@@ -1,10 +1,10 @@
 {
-  "timestamp" : "2022-04-02T01:15:14Z",
-  "count" : 13,
+  "timestamp" : "2022-04-15T08:21:22Z",
+  "count" : 11,
   "count_minmax" : [ 2, 13 ],
   "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 0,
-  "uniques" : 9,
+  "uniques" : 8,
   "uniques_minmax" : [ 1, 9 ],
   "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
