@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-04-14T01:25:09Z",
+  "timestamp" : "2022-04-15T08:21:22Z",
   "count_outdated" : 83,
   "uniques_outdated" : 57,
-  "count" : 126,
-  "uniques" : 87,
+  "count" : 124,
+  "uniques" : 86,
   "clones" : [
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 13,
+      "count": 11,
       "count_minmax": [ 2, 13 ],
-      "uniques": 9,
+      "uniques": 8,
       "uniques_minmax": [ 1, 9 ]
     },
     {
