@@ -1,11 +1,11 @@
 {
-  "count": 43,
-  "uniques": 18,
+  "count": 41,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 13,
-      "uniques": 9
+      "count": 11,
+      "uniques": 8
     },
     {
       "timestamp": "2022-04-02T00:00:00Z",
